DuPont DevSB/src/objects/Case_Company__c.object
<CustomObject>
    <description>Companies related to this case</description>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Case_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Company_Role__c</fullName>
        <description>Role this company is playing in this case</description>
        <label>Company Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>Converter</fullName>
                </value>
                <value>
                    <fullName>Dealer</fullName>
                </value>
                <value>
                    <fullName>Designer</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Fabricator</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Service Center</fullName>
                </value>
                <value>
                    <fullName>Supplier</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Company associated with this Case</description>
        <label>Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Case-Companies</relationshipLabel>
        <relationshipName>Case_Company</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>fCountry__c</fullName>
        <formula>TEXT( Company__r.Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fRegion__c</fullName>
        <description>The GeoRegion from the associated Account</description>
        <formula>TEXT( Company__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The GeoRegion from the associated Account</inlineHelpText>
        <label>GeoRegion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fSubRegion__c</fullName>
        <description>Geo SubRegion from the associated Account</description>
        <formula>Company__r.SubRegion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Geo SubRegion from the associated Account</inlineHelpText>
        <label>GeoSubRegion</label>
        <type>Text</type>
    </fields>
    <label>Case-Company</label>
    <nameField>
        <displayFormat>CACO{YY}{MM}-{0000}</displayFormat>
        <label>Case Company Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case-Companies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>